--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-pizza",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sobadcodder.github.io/react-pizza/",
+  "homepage": "https://sobadcodder.github.io/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/user-event": "^13.5.0",
